--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,5 +1,5 @@
-@color: palevioletred;
+@cdn-blue: #3d428a;
+@cdn-blue-light: #3b47aa;
+@cdn-red: #791500;
 
-.with-styles {
-  background-color: @color;
-}
+@import "navigation";
