--- a/src/style/navigation.less
+++ b/src/style/navigation.less
@@ -1,5 +1,5 @@
 #navigation {
-  background: #cbcbcb;
+  background: @gray2;
   .link-wrapper {
     display: flex;
     flex-direction: row;
@@ -21,9 +21,10 @@
     .active {
       background: @cdn-blue;
       .text {
-        color: #cbcbcb;
+        color: @gray0;
         &:hover {
-          color: #cbcbcb;
+          color: @gray0;
+          text-decoration: none;
         }
       }
     }
