--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,9 +1,40 @@
-@cdn-blue: #3d428a;
-@cdn-blue-light: #3b47aa;
-@cdn-red: #791500;
+@import "variables";
 
 @import "navigation";
 
 html {
   background: url("../assets/images/background.png") repeat;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+body {
+  background: transparent;
+}
+
+.card-wrapper {
+  @media @tablet-down {
+    margin: 0;
+    .card {
+      margin: 40px 0!important;
+    }
+  }
+  margin: 80px 0;
+  h1 {
+    font-weight: 200;
+  }
+  .column {
+    &:first-child {
+      .card {
+        margin-right: 0;
+      }
+    }
+  }
+  .card {
+    border-radius: 3px;
+    border: 0;
+    border-left: 6px solid @cdn-blue;
+    box-shadow: 0 9px 15px rgba(50, 50, 93, 0), 0 8px 15px rgba(0, 0, 0, 0.04);
+    padding: 40px 50px;
+    margin: 0 80px 80px;
+  }
 }
