major dependency tree refactor

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,6 +1,7 @@
 @import "variables";
 
 @import "navigation";
+@import "footer";
 
 html {
   background: url("../assets/images/background.png") repeat;
@@ -36,5 +37,15 @@ body {
     box-shadow: 0 9px 15px rgba(50, 50, 93, 0), 0 8px 15px rgba(0, 0, 0, 0.04);
     padding: 40px 50px;
     margin: 0 80px 80px;
+  }
+}
+
+.page-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  .page {
+    flex-grow: 1;
   }
 }
