--- a/src/style/index.less
+++ b/src/style/index.less
@@ -2,6 +2,7 @@
 
 @import "navigation";
 @import "footer";
+@import "login";
 
 html {
   background: url("../assets/images/background.png") repeat;
