--- a/src/style/footer.less
+++ b/src/style/footer.less
@@ -1,6 +1,23 @@
 #footer {
   background: @gray9;
   color: @gray0;
-  .content {
+  border-top: 1px solid @gray8;
+  padding: 40px 50px;
+  h1 {
+    font-weight: 100;
+    font-size: 1.8em;
+  }
+  .contact {
+    h1 {
+      margin-bottom: 1.5em;
+    }
+    .divider-custom {
+      border-bottom: 1px solid @gray7;
+      margin: 20px 0;
+    }
+    p {
+      line-height: 0.5em;
+      font-size: 0.8em;
+    }
   }
 }
