--- a/src/style/index.less
+++ b/src/style/index.less
@@ -4,6 +4,7 @@
 @import "footer";
 @import "login";
 @import "event";
+@import "dashboard";
 
 html {
   background: url("../assets/images/background.png") repeat;
@@ -74,8 +75,7 @@ body {
 .page-wrapper {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
   .page {
     flex-grow: 1;
   }
