--- a/src/style/dashboard.less
+++ b/src/style/dashboard.less
@@ -1,3 +1,12 @@
 #dashboardPage {
   margin: 50px 70px 120px;
+  @media @tablet-down {
+    margin: 50px 0;
+  }
+  .subview {
+    @media @tablet-down {
+      margin-left: 0;
+    }
+    margin-left: 70px;
+  }
 }
