add better subroutes for admin dash, start editor impl

--- a/src/style/dashboard.less
+++ b/src/style/dashboard.less
@@ -9,4 +9,21 @@
     }
     margin-left: 70px;
   }
+  h1 {
+    font-size: 2em;
+    font-weight: 200;
+    padding-bottom: 20px;
+    margin-bottom: 40px;
+    border-bottom: 1px solid @gray7;
+  }
+}
+#eventEditor {
+  background: #F7F7F7;
+  padding: 30px 40px;
+  border-radius: .1rem;
+  box-shadow: 0 .05rem .2rem rgba(48,55,66,.3);
+  .form-group {
+    width: 50%;
+    margin-bottom: 30px;
+  }
 }
