change to html, almost done with editor

--- a/src/style/dashboard.less
+++ b/src/style/dashboard.less
@@ -23,7 +23,9 @@
   border-radius: .1rem;
   box-shadow: 0 .05rem .2rem rgba(48,55,66,.3);
   .form-group {
-    width: 50%;
     margin-bottom: 30px;
+  }
+  .one-line {
+    width: 50%;
   }
 }
