payment integration with stripe. needs a lot of cleanup

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -5,6 +5,7 @@
 @import "login";
 @import "event";
 @import "dashboard";
+@import "event-listing";
 
 html {
   background: url("../assets/images/background.png") repeat;
