--- a/src/style/navigation.less
+++ b/src/style/navigation.less
@@ -1,7 +1,11 @@
 #navigation {
   background: @gray2;
-  padding: 20px 50px;
+  padding: 20px 60px;
+  border-bottom: 1px solid @gray3;
   a {
+    &:first-of-type {
+      padding-left: 0;
+    }
     padding: 0 20px;
   }
 }
