--- a/src/style/event.less
+++ b/src/style/event.less
@@ -42,3 +42,28 @@
     border-radius: 3px;
   }
 }
+#eventPaymentModal {
+  h4 {
+    font-weight: 100;
+    margin-bottom: 20px;
+  }
+  .close-button {
+    font-size: 2em;
+  }
+  .divider {
+    margin: 30px 0;
+  }
+  .payment-wrapper {
+    margin: 30px 0;
+    .payment {
+      padding: .25rem .4rem;
+      border: .05rem solid #bcc3ce;
+      color: #3b4351;
+      border-radius: .1rem;
+      font-size: .8rem;
+      line-height: 1.2rem;
+      max-width: 100%;
+      transition: all .2s ease;
+    }
+  }
+}
