payment error handling, auth cleanup

--- a/src/style/dashboard.less
+++ b/src/style/dashboard.less
@@ -16,6 +16,19 @@
     margin-bottom: 40px;
     border-bottom: 1px solid @gray7;
   }
+  .event-mgmt-table-wrapper {
+    padding: 20px 40px;
+    border-radius: .1rem;
+
+    background: #F7F7F7;
+    box-shadow: 0 .05rem .2rem rgba(48,55,66,.3);
+    table {
+      background: #F7F7F7;
+      tr {
+        background: #F7F7F7;
+      }
+    }
+  }
 }
 #eventEditor {
   background: #F7F7F7;
@@ -32,3 +45,4 @@
     align-self: flex-end;
   }
 }
+
