--- a/src/style/dashboard.less
+++ b/src/style/dashboard.less
@@ -16,6 +16,10 @@
     margin-bottom: 40px;
     border-bottom: 1px solid @gray7;
   }
+  .subview-heading {
+    border-bottom: 0;
+    margin-bottom: 0;
+  }
   .event-mgmt-table-wrapper {
     padding: 20px 40px;
     border-radius: .1rem;
@@ -30,7 +34,7 @@
     }
   }
 }
-#eventEditor {
+#eventEditor, #researchEditor {
   background: #F7F7F7;
   padding: 30px 40px;
   border-radius: .1rem;
