event analytic, todo: by event

--- a/src/style/dashboard.less
+++ b/src/style/dashboard.less
@@ -34,7 +34,7 @@
     }
   }
 }
-#eventEditor, #researchEditor {
+#eventEditor, #researchEditor, #ticketAnalyticsSubView {
   background: #F7F7F7;
   padding: 30px 40px;
   border-radius: .1rem;
@@ -47,6 +47,9 @@
   }
   .date-input{
     align-self: flex-end;
+  }
+  h1 {
+    border-bottom: 0;
   }
 }
 
