--- a/src/style/index.less
+++ b/src/style/index.less
@@ -8,6 +8,7 @@
 @import "event-listing";
 @import "home";
 @import "research";
+@import "donate";
 
 html {
   background: url("../assets/images/background.png") repeat;
