--- a/src/style/dashboard.less
+++ b/src/style/dashboard.less
@@ -53,3 +53,26 @@
   }
 }
 
+#donorSubView {
+  background: #F7F7F7;
+  padding: 30px 40px;
+  border-radius: .1rem;
+  box-shadow: 0 .05rem .2rem rgba(48,55,66,.3);
+  .avatar {
+    font-size: 3rem;
+    height: 6rem;
+    width: 6rem;
+  }
+  h4 {
+    font-size: 1rem;
+    font-weight: 400;
+    margin: 0px 0 10px;
+  }
+  h3 {
+    border-bottom: 1px solid @gray7;
+    font-weight: 100;
+    font-size: 1.2rem;
+    padding-bottom: 20px;
+    margin-bottom: 30px;
+  }
+}
