--- a/src/style/event.less
+++ b/src/style/event.less
@@ -3,6 +3,12 @@
   @media @tablet-down {
     margin: 100px 0;
   }
+  .pay-toast {
+    margin: 0 60px 30px 0;
+    @media @tablet-down {
+      margin-right: 0;
+    }
+  }
   .description-wrapper {
     margin-right: 60px;
     @media @tablet-down {
