--- a/src/style/index.less
+++ b/src/style/index.less
@@ -9,6 +9,7 @@
 @import "home";
 @import "research";
 @import "donate";
+@import "about";
 
 html {
   background: url("../assets/images/background.png") repeat;
