donor registry... ready for demo!

--- a/src/style/dashboard.less
+++ b/src/style/dashboard.less
@@ -34,7 +34,7 @@
     }
   }
 }
-#eventEditor, #researchEditor, #ticketAnalyticsSubView {
+#eventEditor, #researchEditor, #ticketAnalyticsSubView, #donorRegistry, #donationAnalyticsSubView {
   background: #F7F7F7;
   padding: 30px 40px;
   border-radius: .1rem;
